--- a/mc_tables/no_range_fdr.tex
+++ b/mc_tables/no_range_fdr.tex
@@ -1,13 +1,18 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Sun Jun  4 15:51:11 2017
+% Tue Jun  6 14:33:36 2017
 \begin{tabular}{rlr}
   \hline
  &  & False Discovery Rate \\ 
   \hline
-1 & s1\_over\_list & 0.08 \\ 
-  2 & s1\_under\_list & 0.00 \\ 
-  3 & s2\_over\_list & 0.05 \\ 
-  4 & s2\_under\_list & 0.28 \\ 
-  5 & s3\_over\_list & 0.08 \\ 
+1 & Scenario 1 (over) & 0.05 \\ 
+  2 & Scenario 1 (under) & 0.05 \\ 
+  3 & Scenario 2 (over) & 0.05 \\ 
+  4 & Scenario 2 (under) & 0.28 \\ 
+  5 & Scenario 3 (over) & 0.04 \\ 
+  6 & Scenario 3 (under) & 0.49 \\ 
+  7 & Scenario 4 (over) & 0.06 \\ 
+  8 & Scenario 4 (under) & 0.33 \\ 
+  9 & Scenario 5 (over) & 0.04 \\ 
+  10 & Scenario 5 (under) & 0.40 \\ 
    \hline
 \end{tabular}
