--- a/mc_tables/no_range_fdr.tex
+++ b/mc_tables/no_range_fdr.tex
@@ -1,18 +1,18 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
 % Tue Jun  6 14:33:36 2017
-\begin{tabular}{rlr}
+\begin{tabular}{lr}
   \hline
- &  & False Discovery Rate \\ 
+   Scenario & False Discovery Rate \\
   \hline
-1 & Scenario 1 (over) & 0.05 \\ 
-  2 & Scenario 1 (under) & 0.05 \\ 
-  3 & Scenario 2 (over) & 0.05 \\ 
-  4 & Scenario 2 (under) & 0.28 \\ 
-  5 & Scenario 3 (over) & 0.04 \\ 
-  6 & Scenario 3 (under) & 0.49 \\ 
-  7 & Scenario 4 (over) & 0.06 \\ 
-  8 & Scenario 4 (under) & 0.33 \\ 
-  9 & Scenario 5 (over) & 0.04 \\ 
-  10 & Scenario 5 (under) & 0.40 \\ 
+  1 (over) & 0.05 \\
+  1 (under) & 0.05 \\
+  2 (over) & 0.05 \\
+  2 (under) & \textbf{0.28} \\
+  3 (over) & 0.04 \\
+  3 (under) & \textbf{0.49} \\
+  4 (over) & 0.06 \\
+  4 (under) & \textbf{0.33} \\
+  5 (over) & 0.04 \\
+  5 (under) & \textbf{0.40} \\
    \hline
 \end{tabular}
