--- a/mc_tables/no_range_fdr.tex
+++ b/mc_tables/no_range_fdr.tex
@@ -1,18 +1,13 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Tue Jun  6 14:33:36 2017
-\begin{tabular}{lr}
+% Sun Jun 11 16:43:52 2017
+\begin{tabular}{rrrr}
   \hline
-   Scenario & False Discovery Rate \\
+ & Scenario No. & FDR (under) & FDR (over) \\ 
   \hline
-  1 (over) & 0.05 \\
-  1 (under) & 0.05 \\
-  2 (over) & 0.05 \\
-  2 (under) & \textbf{0.28} \\
-  3 (over) & 0.04 \\
-  3 (under) & \textbf{0.49} \\
-  4 (over) & 0.06 \\
-  4 (under) & \textbf{0.33} \\
-  5 (over) & 0.04 \\
-  5 (under) & \textbf{0.40} \\
+1 &   1 & 0.05 & 0.05 \\ 
+  2 &   2 & 0.28 & 0.05 \\ 
+  3 &   3 & 0.49 & 0.04 \\ 
+  4 &   4 & 0.33 & 0.06 \\ 
+  5 &   5 & 0.39 & 0.04 \\ 
    \hline
 \end{tabular}
